# sagevox

./: .gitignore  DEPLOYMENT.md  README.md
backend/: .env.example  README.md  agent.py  pyproject.toml  run_dev.sh
backend/app/: __init__.py  config.py  main.py
backend/app/models/: __init__.py  book.py  session.py
backend/app/routers/: __init__.py  books.py  live.py
backend/app/services/: library.py
backend/app/voice/: factory.py  interface.py  livekit_impl.py  prompt.py
backend/books/emma/: chapter-01-transcript.json  chapter-02-transcript.json  metadata.json
books/: emma.epub  how-to-invest-money.epub  moyens-infaillibles-de-devenir-riche.epub  sex-education.epub
converter/: README.md  pyproject.toml
converter/output/emma/: chapter-03-transcript.json  chapter-04-transcript.json  metadata.json
converter/sagevox_converter/: __init__.py  cli.py  epub_parser.py  models.py  tts_service.py
ios/: README.md
ios/Sagevox/Sagevox/: Config.plist.example  ContentView.swift  SagevoxApp.swift
ios/Sagevox/Sagevox.xcodeproj/: project.pbxproj
ios/Sagevox/Sagevox.xcodeproj/xcshareddata/xcschemes/: Sagevox.xcscheme
ios/Sagevox/Sagevox/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/Sagevox/Sagevox/Assets.xcassets/AccentGold.colorset/: Contents.json
ios/Sagevox/Sagevox/Assets.xcassets/BackgroundLavender.colorset/: Contents.json
ios/Sagevox/Sagevox/Models/: Book.swift  BookSummary.swift  ReadingProgress.swift
ios/Sagevox/Sagevox/Services/API/: APIClient.swift
ios/Sagevox/Sagevox/Services/Analytics/: AnalyticsService.swift
ios/Sagevox/Sagevox/Services/Audio/: AudioPlayerService.swift  AudioSessionManager.swift
ios/Sagevox/Sagevox/Services/LiveAPI/: AudioStreamManager.swift  LiveAPIClient.swift
ios/Sagevox/Sagevox/Theme/: AppTheme.swift
ios/Sagevox/Sagevox/Utils/: TimeFormatter.swift
ios/Sagevox/Sagevox/ViewModels/: LibraryViewModel.swift  VoiceQAViewModel.swift
ios/Sagevox/Sagevox/Views/BookDetail/: BookDetailView.swift
ios/Sagevox/Sagevox/Views/Common/: BookCoverView.swift
ios/Sagevox/Sagevox/Views/Player/: MiniPlayerView.swift  PlayerView.swift  TextFollowAlongView.swift
ios/Sagevox/Sagevox/Views/VoiceQA/: WaveformView.swift
(+1 files in other folders)
