[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sagevox-converter"
version = "0.1.0"
description = "Convert ePub books to SageVox audiobooks using Gemini TTS"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SageVox Team"}
]
dependencies = [
    "click>=8.1.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "google-genai>=1.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
sagevox-convert = "sagevox_converter.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sagevox_converter*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
